# zed-vive-mr

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md  debug.cpp  debug.h  main.cpp  obj_model.cpp  obj_model.h  openvr_display.cpp  openvr_display.h  tiny_obj_loader.h  util.cpp  util.h  zed_manager.cpp  zed_manager.h  zed_point_cloud.cpp  zed_point_cloud.h
imgui-1.52/: imgui_impl_sdl_gl3.cpp  imgui_impl_sdl_gl3.h
res/: ZED_Position_Offset.conf  composite_real_world_frag.glsl  fullscreen_quad_vert.glsl  global.glsl  imgui_panel_frag.glsl  imgui_panel_vert.glsl  mr_obj_model_frag.glsl  obj_model_frag.glsl  obj_model_vert.glsl  point_cloud_frag.glsl  point_cloud_vert.glsl  zed_prepass_frag.glsl
